Updated stylesheets; edited application.conf, index

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -57,3 +57,9 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+# Enables Cookie-based sessions for HTTPS connections:
+application.session.secure=true
+
+# Avoid sending the session cookie if there were no changes to the session:
+application.session.sendOnlyIfChanged=true
+
