--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: scala
 scala:
    - 2.11.5
+'gem install sass --version "=3.2.12"'
+'gem install compass --version "=0.12.2"'
 script: sbt test
