--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: scala
 scala:
-   - 2.11.5
-'gem install sass --version "=3.2.12"'
-'gem install compass --version "=0.12.2"'
+ - 2.11.5
+before_install:
+ - gem install sass
+ - gem install compass
 script: sbt test
